# carantine

./: .gitignore  README.md
build-carantine_project-Desktop-Debug/: carantine_project  carantine_project.cbp
build-carantine_project-Desktop-Debug/.cmake/api/v1/reply/: cache-v2-c48f31e77e23bd3204aa.json  cmakeFiles-v1-008de0cfb871f579dcb1.json  codemodel-v2-922cb500c02ffcda9d3a.json  index-2020-04-12T18-56-45-0066.json  target-carantine_project-Debug-cc9b412b178d52bf823d.json
carantine_AngularJS/: index.html
carantine_AngularJS/app/: app.js
carantine_CPP/: CMakeLists.txt
carantine_CPP/movement/motors/: motor.cpp  motordriver.cpp  motordriver.h
carantine_CPP/movement/sensors/: ultrasonicsensor.cpp
carantine_project/: .gitignore  CMakeLists.txt  main.cpp  main.h  sensorwrapper.cpp  sensorwrapper.h
carantine_project/movement/: trisonarhandler.cpp  trisonarhandler.h  ultrasonicsensor.cpp  ultrasonicsensor.h
carantine_project/movement/Motors/: motor.cpp  motor.h
carantine_project/movement/motors/: motor.h
system/pwr_bttn_setup/: uninstall.sh
test_scripts/: cameratest.py  distance  four-wire-motor.py  keycodes.py  motor_test.py  ultrasonic_distance.py  ultrasonicsensor.cpp  wiringPiTests.cpp
